# al

./: .gitignore
as/: 1.s  86.s  makefile
cpp/DS/: DS.vcxproj  main.cpp  testString.h
cpp/DS/Debug/: vc141.idb
cpp/DS/Debug/DS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DS.lastbuildstate
cpp/DS/x64/Debug/: vc141.idb
cpp/Everything/: CMakeLists.txt  hotkey.h  lineedit.cpp  lineedit.h  listviewdatamodel.cpp  listviewdatamodel.h  listwidget.cpp  listwidget.h  widget.cpp  widget.h  widget.ui
cpp/asm/: 1.c  a.disassembly  makefile
cpp/lex_yacc/: 1.l  1.y  2.l  3.l  calculator.h  calculator.l  calculator.y  calculator1.l  calculator1.y  makefile
cpp/libevent/: CMakeLists.txt
cpp/libevent/src/: base.h  event.cc  event.h  main.cc  utils.h
cpp/recipes/: CMakeLists.txt  defines.sh  list.md  recepies.pro  recipes.files  recipes.includes  tags
cpp/recipes/src/: a.cpp  a.h  main.cpp
cpp/recipes/src/al/: MinHeap.h  merge.h
cpp/recipes/src/buffer/: buffer.cpp  buffer.h  test.h
cpp/recipes/src/bytebuf/: bytebuf.cpp  bytebuf.h  test.h
cpp/recipes/src/design_patterns/: SOLID_Open_Close.h  builder.h  groovy_builder.h  thread_safe_singleton.h
cpp/recipes/src/easylogging/: test_easylogging.h
cpp/recipes/src/gperf/: HttpCommomHeaders.h  HttpCommomHeaders.h.gperf  HttpCommomHeadersHash.cpp  HttpCommomHeadersHash.h  HttpCommomHeadersHash.h.gperf  gen.sh  headersForGperf.txt  test.h
cpp/recipes/src/guid_map/: guid_hash_map.h  test.h
cpp/recipes/src/http/: HttpCommomHeader.cpp  HttpCommomHeader.h  HttpCommomHeaders.cpp  HttpCommomHeaders.h  HttpHeader.cpp  HttpHeader.h  HttpHeaderCode.h  HttpHeaders.cpp  HttpHeaders.h  HttpMessage.cpp  HttpMethod.cpp  HttpMethod.h
cpp/recipes/src/http_parser/: HttpHeader.h  HttpMethod.h  HttpParser.cpp  URLParser.cpp  URLParser.h  http_parser.cpp  test.h
cpp/recipes/src/http_paser/: http_paser.cpp  http_paser.h  test.h
cpp/recipes/src/md/: boost_intrusive.md
cpp/recipes/src/mysql_gtid/: mysql_gtid.cpp  mysql_gtid.h
cpp/recipes/src/string_piece/: string_piece.cpp  string_piece.h  test.h
cpp/recipes/test/: main.cpp
cpp/test/: main.cpp  my_sp_convetable.h  shared_from_this_test.h  template.h  test.cpp  test.sln  test.vcxproj  test.vcxproj-BGC-jwang284-Y.filters  test.vcxproj.filters  test_str.h  util.h
cpp/test/Leetcode/: 001_two_sum.h  002_add_two_numbers.h  003_longest_substring_without_repeating_characters-BGC-jwang284-Y.h  003_longest_substring_without_repeating_characters.h  Leetcode.vcxproj  Leetcode.vcxproj.filters  main.cpp
cpp/test_cpp/: main.cpp  test_cpp.vcxproj  test_cpp.vcxproj.filters
cpp/thread_pool/: main.cpp  thread_pool.h  thread_pool.vcxproj  thread_pool.vcxproj.filters
cpp/tools/: CMakeLists.txt  bd  build.sh  deps.sh
cpp/tools/cmake/: common.cmake  proto.cmake
cpp/tools/include/: thread_pool.h
cpp/tools/include/design_patterns/basic/: SOLID_Open_Close.h
cpp/tools/include/design_patterns/builder/: builder.h
cpp/tools/include/design_patterns/creational/factory/: factory.h  factory_method.h
cpp/tools/include/design_patterns/creational/prototype/: prototype.h
cpp/tools/include/design_patterns/prototype/: prototype.h
cpp/tools/include/design_patterns/structural/: bridge.h
cpp/tools/protos/: paxos.proto  raft.proto
cpp/tools/src/helloworld/: CMakeLists.txt
cpp/tools/src/paxos/: CMakeLists.txt  paxos_instance.cc  paxos_instance.h
cpp/tools/src/raft/: CMakeLists.txt  raft_instance.cc  raft_instance.h
cpp/tools/src/reactor/: CMakeLists.txt  event_reactor_impl.cc  event_reactor_impl.h  reactor.cc  reactor.h  reactor_impl.cc  reactor_impl.h  timer.cc  timer.h  uv_reactor_impl.cc  uv_reactor_impl.h
cpp/tools/test/: CMakeLists.txt  design_pattern_test.cc  raft_test.cc  raft_test_util.h  reactor_test.cc  test.cc
cpp/windowscpp/: windowscpp.sln
cpp/windowscpp/windowscpp/: Buffer.cpp  Buffer.h  ConfigParser.cpp  ConfigParser.h  Connection.cpp  Connection.h  DirMonitor.cpp  DirMonitor.h  DownloadRequestConnection.cpp  DownloadRequestConnection.h  Source.cpp  StateConnection.cpp  StateConnection.h  config.json  main.cpp  windowscpp.vcxproj  windowscpp.vcxproj.filters
cs/: Program.cs
cs/mono_game/Game1/: Game1.cs  Game1.csproj  Game1.sln
cs/test/: Program.cs
cs/tests/: Program.cs  test.sln  tests.sln
cs/tests/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
cs/tests/test/: Program.cs  Stage.cs  StageManager.cs  test.csproj
cs/twosum/: TwoSum.cs
go/: 1  1.go
java_demo/: .classpath  .project
java_demo/src/java_demo/: MainClass.java  UnpByteBuffer.java
md/: important.md  notes.md
md/db/: database.md  distributed database deadlock dection.html  distributed database deadlock dection.md  float ip.html  float ip.md  innodb.md  io_hang.md  iohang.uxf  monitor_point.md  mysql.md  notes.md  papers.md
md/lex_yacc/: lex.md  lex_yacc.md
md/nginx/: nginx.md  rewrite_module.md
py/: .ycm_extra_conf.py  d1
py/DBBuilder/: DBBuilder.py  mysql.conf
py/HttpHeaderGen/: HttpCommomHeaders.txt  HttpHeaderGen.py  headers.txt
py/downloader/: main.py  rangedownloader.py
py/lianjia_todb/: lianjia_todb.py
py/tests/: DownloaderServer.py  Py.py  aria2c.conf  aria2c_rpc.py  dbtest.py  downloader.py  find_m3u8.py  fund.py  fund_calc.py  fund_rt.py  httpserver.py  import_test.py  import_test2.py  jijin.py  m3u8_downloader.py  main.py  ncurses.py  peewee_test.py  test_Eof.py  web_page_video_downloader.py
py/up/: db.py  fetch.py  musics  player.py  up.py
sql/: create_tables.sql  insert_entities.sql  main.sql
(+50 files in other folders)
